Change domain to be vmware.com for HTTP verifier
Google.com is now checking whether or not a `curl` request to their
domain is a robot, and is generating a 302 status code. This redirect
expects a human to respond. Thus, we can't use google.com anymore for
our HttpSuccessVerifier checks.

[#176643698] BOSH DNS leaf certs should be generated with subject alternative names

Signed-off-by: Brian Upton <bupton@pivotal.io>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -42,7 +42,7 @@ releases:
 install_time_verifiers:
 - name: Verifiers::HttpSuccessVerifier
   properties:
-    host: www.google.com
+    host: www.vmware.com
     port: 443
     path: /
     scheme: https
