Changes HTTP verifier URL to something we control
`https://www.vmware.com` has started returning 403's. Why? Who knows!
But it has been causing all of our specs in CI to fail.

Turns out that UAA has a perfectly servicable web server that will
return 200s for requests, so we're using that in our verifier.

Because other parts of the system are making calls out to off-site
IAASs, we aren't losing the network-connectivity verification that this
check _was_ providing. Would be good to be able to keep this extra
check, but -because we run in Nimbus-, our options are really limited.

Signed-off-by: Brian Upton <bupton@vmware.com>

--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -42,10 +42,10 @@ releases:
 install_time_verifiers:
 - name: Verifiers::HttpSuccessVerifier
   properties:
-    host: www.vmware.com
-    port: 443
-    path: /
-    scheme: https
+    host: localhost
+    port: 8080
+    path: /uaa/login
+    scheme: http
 
 variables:
   - name: credhub-password
