--- a/example-product/metadata/example-product.yml.erb
+++ b/example-product/metadata/example-product.yml.erb
@@ -34,10 +34,10 @@ releases:
     version: <%= release_file_name.match(/^example-release-(.*)\.tgz$/)[1].inspect %>
   - name: os-conf
     file: os-conf
-    version: '15'
+    version: <%= os_conf_version %>
   - name: bpm
     file: bpm
-    version: 1.1.3
+    version: <%= bpm_version %>
 
 install_time_verifiers:
 - name: Verifiers::HttpSuccessVerifier
@@ -650,7 +650,7 @@ property_blueprints:
         manifest: |
           releases:
            - name: os-conf
-             version: 15
+             version: <%= os_conf_version %>
           addons:
             - name: misc
               jobs:
