--- a/example-release/config/private.yml.erb
+++ b/example-release/config/private.yml.erb
@@ -4,3 +4,4 @@ blobstore:
   options:
     access_key_id: <%= aws_access_key_id %>
     secret_access_key: <%= aws_secret_access_key %>
+    assume_role_arn: <%= aws_role_arn %>
