--- a/example-runtime-config-product/metadata/example-runtime-config-product.yml.erb
+++ b/example-runtime-config-product/metadata/example-runtime-config-product.yml.erb
@@ -19,20 +19,80 @@ form_types:
       - reference: .properties.echo_value
         label: Echo Value
         description: 'Configure a value to repeatedly echo'
-      - reference: .properties.sleep_value
+      - reference: .properties.string_value
+        label: String Value
+        description: 'Configure a value to string!'
+      - reference: .properties.cron_value
+        label: Cron Value
+        description: 'Configure a value to cron!'
+      - reference: .properties.regex_value
+        label: Regex Value
+        description: 'Configure a value to regex!'
+      - reference: .properties.ip_address_value
+        label: IP Address Value
+        description: "IPv4 ADDRESS!"
+      - reference: .properties.ip_ranges_value
+        label: IP Ranges Value
+        description: "IPv4 ADDRESS RANGES!"
+      - reference: .properties.ldap_url_value
+        label: LDAP URL
+        description: "LDAP URL!"
+      - reference: .properties.network_address_value
+        label: Network Address Value
+        description: "Network ADDRESS!"
+      <%# - reference: .properties.sleep_value
         label: Sleep Value
         description: 'Time to sleep between echoes'
       - reference: .properties.exit_value
         label: Exit Value
-        description: 'Configure a value to echo at exit'
+        description: 'Configure a value to echo at exit' %>
 
 property_blueprints:
   - name: echo_value
+    <%# type: string %>
+    type: boolean
+    configurable: true
+    optional: false
+    <%# default: 'hello' %>
+    default: false
+  - name: string_value
     type: string
     configurable: true
     optional: false
     default: 'hello'
-  - name: sleep_value
+  - name: cron_value
+    type: string
+    configurable: true
+    optional: false
+    default: '5 0 * * *'
+    constraints: [ must_be_cron_schedule: true ]
+  - name: regex_value
+    type: string
+    configurable: true
+    optional: false
+    default: 'ABCD'
+    constraints: [ must_match_regex: '[A-Z]*' ]
+  - name: ip_address_value
+    type: ip_address
+    configurable: true
+    optional: false
+    default: '127.0.0.1'
+  - name: ip_ranges_value
+    type: ip_ranges
+    configurable: true
+    optional: false
+    default: '127.0.0.1-127.0.0.5'
+  - name: ldap_url_value
+    type: ldap_url
+    configurable: true
+    optional: false
+    default: 'ldaps://host:443/invalid_path'
+  - name: network_address_value
+    type: network_address
+    configurable: true
+    optional: false
+    default: 'hostname.example.com'
+  <%# - name: sleep_value
     type: integer
     configurable: true
     optional: false
@@ -41,7 +101,7 @@ property_blueprints:
     type: string
     configurable: true
     optional: false
-    default: '0'
+    default: '0' %>
 
 runtime_configs:
   - name: dummy
@@ -57,8 +117,16 @@ runtime_configs:
               properties:
                 dummy_with_properties:
                   echo_value: (( .properties.echo_value.value ))
-                  sleep_value: (( .properties.sleep_value.value ))
-                  exit_value: (( .properties.exit_value.value ))
+                  string_value: (( .properties.string_value.value ))
+                  cron_value: (( .properties.cron_value.value ))
+                  regex_value: (( .properties.regex_value.value ))
+                  ip_address_value: (( .properties.ip_address_value.value ))
+                  ip_ranges_value: (( .properties.ip_ranges_value.value ))
+                  ip_ranges_value_parsed: (( .properties.ip_ranges_value.parsed_ip_ranges ))
+                  ldap_url_value: (( .properties.ldap_url_value.value ))
+                  network_address_value: (( .properties.network_address_value.value ))
+                  <%# sleep_value: (( .properties.sleep_value.value ))
+                  exit_value: (( .properties.exit_value.value )) %>
           include:
             stemcell:
               - os: <%= stemcell_os.inspect %>
